# vit

./: .gitignore  pyproject.toml
src/vit/: data.py  patch.py
