[build-system]
requires = ['setuptools', 'setuptools_scm', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name="torch-vit"
dependencies = []
dynamic = ['version']

[tool.setuptools.dynamic]
version = {attr="vit._version.version"}

[tool.setuptools_scm]
write_to = "src/vit/_version.py"

[tool.isort]
force_single_line = true

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 79 

[tool.ruff]
line-length = 79
